style.css
/* Global rules */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;

}

body {
  font-family: Arial, Helvetica, sans-serif;
}

ol {
  list-style: none;
}

form input[type=submit],
form input[type=reset] {
  cursor: pointer;
  padding: 8px 15px;
  border: 1px solid #999;
  border-radius: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  -o-border-radius: 5px;
}

/* Body */
body {
  display: flex;
  justify-content: center;
  align-items: top;
  background-image: url(./images/todo-bg.png);
}

main {
  margin: 150px 0;
  width: 545px;
  padding: 30px;
  background-color: #fff;
  box-shadow: 0px 0px 25px #BBB;
  position: relative;
}

main > span:first-child {
  background-color: red;
  color: #fff;
  font-weight: 700;
  position: absolute;
  top: 15px;
  right: 15px;
  padding: 4px 6px;
  border-radius: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  -o-border-radius: 5px;
}

main h1 {
  height: 38px;
  width: 233px;
  text-align: center;
  margin: 40px auto;
  color: transparent;
  background: 
    url(./images/todo.png)
    no-repeat left top / contain;
  cursor: default;
}

main h1::selection {
  background-color: transparent;
}

main p span {
  font-style: italic;
}

main form:first-of-type {
  display: flex;
  gap: 10px;
  margin-top: 10px;
  background-color: #b6ccdb;
  border: 2px #5f97c0 solid;
  padding: 10px;
}

main form:first-of-type input[type=text] {
  width: 100%;
  padding: 8px;
  border: 1px solid #999;
  border-radius: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  -o-border-radius: 5px;
}

main form:first-of-type input[type=submit] {
  padding-left: 24px;
  background-image: url(./images/add.png);
  background-size: 16px;
  background-repeat: no-repeat;
  background-position: center left 5px;
  background-color: #eee;
}

main form:first-of-type input[type=submit]:hover {
  background-color: #D0D0D7;
}

main form:first-of-type input[type=submit]:active {
  background-color: #B1B1B9;
}

main ol {
  margin: 15px 0;
  padding-bottom: 15px;
  border-top: 1px solid #eee;
  border-bottom: 4px solid #5f97c0;
}

main ol li {
  display: flex;
  gap: 6px;
  align-items: center;
  justify-content: space-between;
  padding: 4px 4px 4px 6px;
  border-bottom: 1px solid #eee;
}

main ol li:hover {
  background-color: rgb(252, 239, 241);

}

main ol li:hover .up,
main ol li:hover .down,
main ol li:hover .delete {
  visibility: visible;
}

main ol li p {
  width: 90%;
}

main form:nth-of-type(2) input {
  float: right;
  margin-left: 10px;
}

/* Styling js elements */

main ol li textarea {
  width: 90%;
  resize: none;
  border: none;
  outline: none;
  background-color: inherit;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 16px;
  overflow-wrap: break-word;
}

/* .new_li {
  /* To be reactivated when using save button 
  /* background-color: #ffdde2; 
} */


.up,
.down,
.delete {
  height: 16px;
  width: 16px;
  background-color: transparent;
  border: none;
  cursor: pointer;
  visibility: hidden;
}
.up {
  background-image: url(./images/up.png);
}
.down {
  background-image: url(./images/down.png);
}
.delete {
  background-image: url(./images/delete.png);
}

